another try to fix mvn issue