@@ -73,8 +73,9 @@
                 <artifactId>maven-source-plugin</artifactId>
                 <version>3.0.0</version>
                 <configuration>
+                    <forkCount>3</forkCount>
                     <reuseForks>true</reuseForks>
-                    <useSystemClassLoader>false</useSystemClassLoader>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                 </configuration>
                 <executions>
                     <execution>
